src/test/ui/half-open-range-patterns/exclusive_range_pattern_syntax_collision2.stderr
error[E0527]: pattern requires 2 elements but array has 3
  --> $DIR/exclusive_range_pattern_syntax_collision2.rs:6:9
   |
LL |         [_, 99..] => {},
   |         ^^^^^^^^^ expected 3 elements

error[E0308]: mismatched types
  --> $DIR/exclusive_range_pattern_syntax_collision2.rs:6:13
   |
LL |         [_, 99..] => {},
   |             ^^ expected struct `std::ops::Range`, found integer
   |
   = note: expected struct `std::ops::Range<{integer}>`
                found type `{integer}`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0308, E0527.
For more information about an error, try `rustc --explain E0308`.
